# hivemind

./: Cargo.toml  README.md  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
crates/hivemind-adapters/: Cargo.toml
crates/hivemind-adapters/src/: fs.rs  lib.rs  sqlite.rs
crates/hivemind-app/: Cargo.toml
crates/hivemind-app/src/: error.rs  lib.rs  ports.rs  publish_object.rs
crates/hivemind-cli/: Cargo.toml
crates/hivemind-cli/src/: lib.rs  main.rs
crates/hivemind-core/: Cargo.toml
crates/hivemind-core/src/: error.rs  ids.rs  lib.rs  object.rs
crates/hivemind-node/: Cargo.toml
crates/hivemind-node/src/: api.rs  config.rs  dev_identity.rs  file_identity.rs  lib.rs  main.rs  net.rs  secret_file.rs  state.rs  token.rs
docs/: architecture-v1.md  development.md  hive-cli.md  hive-skill.md  local-demo.md  releases.md  two-machine-v1-checklist.md  two-node-transfer.md
e2e-tests/: discovery-beacon.sh  local-demo.sh  two-node-chat.sh
examples/: local-node.toml
scripts/: local-demo.sh  two-node-transfer-demo.sh
skills/hive/: SKILL.md
www/: CNAME  index.html  robots.txt  sitemap.xml
