[workspace]
members = [
    "crates/hivemind-core",
    "crates/hivemind-node",
    "crates/hivemind-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/nootr/hivemind"

[workspace.dependencies]
ed25519-dalek = "2.1"
hex = "0.4"
getrandom = "0.2"
thiserror = "1.0"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "time"] }
axum = "0.8.9"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
toml = "0.8"
tempfile = "3.10"
tower = "0.5"
