[package]
name = "hivemind-adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
hivemind-app = { path = "../hivemind-app" }
hivemind-core = { path = "../hivemind-core" }
minicbor.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
