[package]
name = "hivemind-cli"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
clap.workspace = true
hivemind-core = { path = "../hivemind-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
