[package]
name = "hivemind-core"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
