[package]
name = "hivemind-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
getrandom.workspace = true
hex.workspace = true
hivemind-adapters = { path = "../hivemind-adapters" }
hivemind-app = { path = "../hivemind-app" }
hivemind-core = { path = "../hivemind-core" }
minicbor.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tower.workspace = true
