[package]
name = "hivemind-node"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
hivemind-core = { path = "../hivemind-core" }
get_if_addrs.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
